force-app/main/default/objects/cdcpc__RD_TBL_CompCapHtSTD__c/cdcpc__RD_TBL_CompCapHtSTD__c.object-meta.xml
<CustomObject>
    <label>RD TBL CompCapHtSTD</label>
    <nameField>
        <label>RD TBL CompCapHtSTD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD TBL CompCapHtSTD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>