force-app/main/default/objects/cdcpc__RD_TBL_CompCapHtSTD__c/fields/cdcpc__DiscMatlCode__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DiscMatlCode__c</fullName>
    <label>DiscMatlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>