force-app/main/default/objects/cdcpc__RD_TBL_CompCapHtSTD__c/fields/cdcpc__Flag__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Flag__c</fullName>
    <label>Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>