force-app/main/default/objects/cdcpc__RD_TBL_CompCapHtSTD__c/fields/cdcpc__ThckUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ThckUL__c</fullName>
    <label>ThckUL</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>