force-app/main/default/objects/cdcpc__RD_TBL_CompCapHtSTD__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__DiscMatlCode__c</columns>
    <columns>cdcpc__SizeLL__c</columns>
    <columns>cdcpc__SizeUL__c</columns>
    <columns>cdcpc__ThckLL__c</columns>
    <columns>cdcpc__ThckUL__c</columns>
    <columns>cdcpc__CapHeight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>